# Switch-SDK-drivers

./: CMakeLists.txt  Makefile  README.md  configure  makefile
debian/: changelog  control  rules
drivers/: CMakeLists.txt
drivers/net/: CMakeLists.txt
drivers/net/local_mlxfw/: mlxfw_main.c
drivers/net/mlx_sx/: CMakeLists.txt  Makefile  alloc.c  alloc.h  ber_monitor.c  ber_monitor.h  bulk_cntr_db.c  bulk_cntr_db.h  bulk_cntr_event.c  bulk_cntr_event.h  catas.c  cmd.c  counter.c  counter.h  cq.c  cq.h  cr_dump.c  cr_mode_polling.c  dbg.c  dbg_db.c  dbg_host_ifc.c  dev_callbacks.c  dev_callbacks.h  dev_db.c  dev_db.h  dev_init.c  dev_init.h  dq.c  dq.h  drop_monitor.c  drop_monitor.h  emad.c  emad.h  eq.c  eq.h  fw.h  fw_cmd.c  fw_common.c  fw_internal.h  fw_reg.c  (+69 more)
drivers/net/mlx_sx/auto_registers/: fw_reg_auto.c  ioctl_reg_auto.c  reg.c  sx_proc_auto.c
drivers/net/mlx_sx/debug/: CMakeLists.txt
drivers/net/mlx_sx/debug/memtrack/: CMakeLists.txt  Makefile  memtrack.c  memtrack.h  mtrack.h
drivers/net/mlxfw/: mlxfw.h  mlxfw_fsm.c  mlxfw_mfa2.c  mlxfw_mfa2.h  mlxfw_mfa2_file.h  mlxfw_mfa2_format.h  mlxfw_mfa2_tlv.h  mlxfw_mfa2_tlv_multi.c  mlxfw_mfa2_tlv_multi.h
drivers/net/sx_bfd/: CMakeLists.txt  Makefile  sx_bfd_cdev.c  sx_bfd_cdev.h  sx_bfd_engine_ctrl.c  sx_bfd_engine_ctrl.h  sx_bfd_engine_data.c  sx_bfd_engine_data.h  sx_bfd_event.c  sx_bfd_event.h  sx_bfd_main.c  sx_bfd_rx_session.c  sx_bfd_rx_session.h  sx_bfd_socket.c  sx_bfd_socket.h  sx_bfd_tx_session.c  sx_bfd_tx_session.h  sx_bfd_workqueue.c  sx_bfd_workqueue.h
drivers/net/sx_emad_dump/: CMakeLists.txt  Makefile  sx_emad_dump_main.c
drivers/net/sx_netdev/: CMakeLists.txt  Makefile  sx_bridge_rtnetlink.c  sx_netdev.h  sx_netdev_addons.h  sx_netdev_main.c  sx_netdev_module_sysfs_eeprom.c  sx_netdev_module_sysfs_eeprom.h  sx_netdev_module_sysfs_s3ip.c  sx_netdev_module_sysfs_s3ip.h  sx_netdev_rtnetlink.c  sx_netdev_trace.h  sx_psample.c  sx_psample.h  synce.c  synce.h
drivers/net/sx_spice_dump/: CMakeLists.txt  Makefile  sx_spice_access_reg.c  sx_spice_access_reg.h  sx_spice_access_reg_auto.c  sx_spice_access_reg_auto.h  sx_spice_bulk_cntr.c  sx_spice_bulk_cntr.h  sx_spice_dump_main.c  sx_spice_tree_auto.c  sx_spice_tree_auto.h  sx_spice_tree_dynamic.c  sx_spice_tree_dynamic.h  sx_spice_uphy_reg_auto.c  sx_spice_uphy_reg_auto.h  sx_spice_uphy_reg_infra.c  sx_spice_uphy_reg_infra.h  sx_spice_wrapper.h
drivers/net/sx_spice_dump/adb/: sx_spice_asic_counters.adb  sx_spice_ber.adb  sx_spice_ber_eth.adb  sx_spice_ber_ib.adb
drivers/net/sx_spice_dump/generator/: spice.yaml  spice_tree_generator.py  uphy_reg_generator.py
include/linux/mlx_sx/: cmd.h  device.h  driver.h  kernel_user.h  map.h  skb_hook.h  sx_i2c_if.h
include/linux/sx_bfd/: sx_bfd_ctrl_cmds.h
include/stub/net/: drop_monitor.h  flow_offload.h
iproute2/patches/: README
iproute2/patches/5.10.0/: 0001-Added-sx_netdev-and-sx_bridge-support-to-iproute2.patch  series
iproute2/patches/5.11.0/: 0001-Added-sx_netdev-and-sx_bridge-support-to-iproute2.patch  series
iproute2/patches/6.1.0/: series  (+1 more)
kernel_backports/: apply_patches_example.sh
kernel_backports/4.19/: README
kernel_backports/4.19.0/: 0001-drop_monitor-work-around-gcc-10-stringop-overflow-wa.patch  0001-psample-new-attr-tc-tc-occ-latency.patch  0004-drop_monitor-Document-scope-of-spinlock.patch  0007-drop_monitor-Use-pre_doit-post_doit-hooks.patch  0008-drop_monitor-Split-tracing-enable-disable-to-differe.patch  0009-drop_monitor-Initialize-timer-and-work-item-upon-tra.patch  0010-drop_monitor-Reset-per-CPU-data-before-starting-to-t.patch  0011-drop_monitor-Require-CAP_NET_ADMIN-for-drop-monitor-.patch  0012-drop_monitor-Add-alert-mode-operations.patch  0013-drop_monitor-Add-packet-alert-mode.patch  0014-drop_monitor-Allow-truncation-of-dropped-packets.patch  0015-drop_monitor-Add-a-command-to-query-current-configur.patch  0016-drop_monitor-Make-drop-queue-length-configurable.patch  0017-drop_monitor-Expose-tail-drop-counter.patch  0019-drop_monitor-Initialize-hardware-per-CPU-data.patch  0020-drop_monitor-Add-basic-infrastructure-for-hardware-d.patch  0021-drop_monitor-Consider-all-monitoring-states-before-p.patch  0023-drop_monitor-Add-support-for-summary-alert-mode-for-.patch  0024-drop_monitor-Allow-user-to-start-monitoring-hardware.patch  0025-drop_monitor-Make-timestamps-y2038-safe.patch  0026-drop_monitor-Better-sanitize-notified-packets.patch  0028-drop_monitor-Do-not-cancel-uninitialized-work-item.patch  0029-flow_offload-pass-action-cookie-through-offload-structures.patch  0030-drop_monitor-extend-by-passing-cookie-from-driver.patch  0031-net-drop_monitor-use-IS_REACHABLE-to-guard-net_dm_hw.patch  README  apply_patches_example.sh
kernel_backports/5.10/: README
kernel_backports/5.10.0/: 0001-psample-new-attr-tc-tc-occ-latency.patch  README
sx_scripts/: 91-sx.rules  CMakeLists.txt  Makefile  blacklist-sx.conf  checkout_files  configure  makefile  sx_checkout.sh  sx_kernel.spec  sx_makedist.sh  sx_prepare_for_build.sh  sxdfwburn.sh  sxdkernel
sx_scripts/kernel_backports/3.10.0-693/: 0001_mlx_sx_clock_c.patch  0001_mlx_sx_h.patch  0001_sx_netdev_main_c.patch
sx_scripts/kernel_backports/3.10.0-957/: 0001_sx_netdev_main_c.patch
sx_scripts/kernel_backports/4.11.9/: 0001_sx_netdev_sx_netdev_rtnetlink.patch  0002_sx_netdev_sx_bridge_rtnetlink.patch
sx_scripts/kernel_backports/4.15.15/: 0001_sx_core_main.patch  0002_mlx_sx_cq.patch  0003_mlx_sx_catas.patch  0004_mlx_sx_clock.patch  0004_mlx_sx_clock_spc1.patch  0005_mlx_sx_emad_dump_main.patch  0006_sx_netdev_sx_netdev_rtnetlink.patch  0007_sx_netdev_sx_bridge_rtnetlink.patch  0008_mlx_sx_sgmii_transport.patch  0009_mlx_sx_debug_memtrack.patch  0010_sx_netdev_sx_netdev_main.patch
sx_scripts/kernel_backports/4.19.0/: 0001_mlx_sx_clock.patch  0002_sx_bfd_sx_bfd_socket.patch
sx_scripts/kernel_backports/4.9.0/: 0001_mlx_sx_clock_c.patch  0001_mlx_sx_clock_h.patch  0001_mlx_sx_clock_spc1_c.patch  0001_mlx_sx_h.patch  0001_mlx_sx_sgmii_transport.patch  0001_sx_emad_dump_main.patch  0001_sx_netdev_main_c.patch
(+29 files in other folders)
